# plankalkul

./: Cargo.toml  README.md  build-pwa  manifest.json  sw.js
.github/workflows/: ci.yml  gh-pages-deploy.yml
pkg/: bundle.js  package.json  plankalkul_pwa.d.ts  plankalkul_pwa.js  plankalkul_pwa_bg.wasm  plankalkul_pwa_bg.wasm.d.ts
plankalkul/: Cargo.toml
plankalkul-pwa/: Cargo.toml
plankalkul-pwa/src/: app.rs  lib.rs
plankalkul-pwa/static/: index.html  main.js  sw.js
plankalkul/src/: expr.rs  expr_calc.rs  expr_parse.rs  lib.rs  main.rs  num.rs  num_decimal.rs  num_parse.rs
src/: expr.rs  expr_calc.rs  expr_parse.rs  lib.rs  main.rs  num.rs  num_parse.rs
