[package]
edition = "2021"
name = "plankalkul-pwa"
version = "0.1.0"
authors = ["alex <alex@pdp7.net>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
web-sys = { version = "^0.3.70", features = ["Event","EventTarget","InputEvent"] }
yew = { version = "^0.21", features = ["csr"] }
plankalkul = { path = "../plankalkul" }
